# RMysty

./: .gitignore  LICENSE  README.md  SCHEMA.sql  config.example.toml  launcher.py  pyproject.toml  requirements.txt  translations.json
constants/: __init__.py  constants.py  meta.py
core/: __init__.py  bot.py  config.py  constants.py  enums.py  fuzzy.py  logs.py  lru.py  translator.py  utils.py  views.py
database/: __init__.py  models.py
extensions/: __init__.py  admin.py  chii.py  colours.py  media.py  mod_notes.py  mystbin.py  opencollective.py  pythonista.py  random.py  time.py
modules/: admin.py  pythonista.py
sql/: schema.sql
types_/: codeblocks.py  colours.py  config.py  mystbin.py  notes.py  translations.py
